removed sites from footer and fixed alignment of I,c logo

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -53,27 +53,27 @@ i {
   // color: #55b5db;
   color: #0092ca;
   margin-left: 0.1em;
-  margin-right: 0.1em;
+  margin-right: 0.15em;
 }
 
 .icon-ah-logo-no-color:before {
   content: "\e900";
   margin-left: 0.1em;
-  margin-right: 0.1em;
+  margin-right: 0.15em;
 }
 
 .icon-ic-logo:before {
   content: "\e901";
   color: #55b5db;
   margin-left: 0.1em;
-  margin-right: 0.1em;
+  margin-right: 0.15em;
 }
 
 .icon-ic-logo-no-color:before {
   content: "\e903";
   color: #0092ca;
   margin-left: 0.1em;
-  margin-right: 0.1em;
+  margin-right: 0.25em;
 }
 
 .icon-discogs:before {
